tests/ui/asm/aarch64/bad-reg.stable.stderr
error: invalid register class `foo`: unknown register class
  --> $DIR/bad-reg.rs:20:20
   |
LL |         asm!("{}", in(foo) foo);
   |                    ^^^^^^^^^^^
   |
   = note: the following register classes are supported on this target: `reg`, `vreg`, `vreg_low16`, and `preg`

error: invalid register `foo`: unknown register
  --> $DIR/bad-reg.rs:22:18
   |
LL |         asm!("", in("foo") foo);
   |                  ^^^^^^^^^^^^^

error: invalid asm template modifier `z` for this register class
  --> $DIR/bad-reg.rs:24:15
   |
LL |         asm!("{:z}", in(reg) foo);
   |               ^^^^   ----------- argument
   |               |
   |               template modifier
   |
   = note: the `reg` register class supports the following template modifiers: `w` and `x`

error: invalid asm template modifier `r` for this register class
  --> $DIR/bad-reg.rs:26:15
   |
LL |         asm!("{:r}", in(vreg) foo);
   |               ^^^^   ------------ argument
   |               |
   |               template modifier
   |
   = note: the `vreg` register class supports the following template modifiers: `b`, `h`, `s`, `d`, `q`, and `v`

error: invalid asm template modifier `r` for this register class
  --> $DIR/bad-reg.rs:28:15
   |
LL |         asm!("{:r}", in(vreg_low16) foo);
   |               ^^^^   ------------------ argument
   |               |
   |               template modifier
   |
   = note: the `vreg_low16` register class supports the following template modifiers: `b`, `h`, `s`, `d`, `q`, and `v`

error: asm template modifiers are not allowed for `const` arguments
  --> $DIR/bad-reg.rs:30:15
   |
LL |         asm!("{:a}", const 0);
   |               ^^^^   ------- argument
   |               |
   |               template modifier

error: asm template modifiers are not allowed for `sym` arguments
  --> $DIR/bad-reg.rs:32:15
   |
LL |         asm!("{:a}", sym main);
   |               ^^^^   -------- argument
   |               |
   |               template modifier

error: invalid register `x29`: the frame pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:34:18
   |
LL |         asm!("", in("x29") foo);
   |                  ^^^^^^^^^^^^^

error: invalid register `sp`: the stack pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:36:18
   |
LL |         asm!("", in("sp") foo);
   |                  ^^^^^^^^^^^^

error: invalid register `xzr`: the zero register cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:38:18
   |
LL |         asm!("", in("xzr") foo);
   |                  ^^^^^^^^^^^^^

error: invalid register `x19`: x19 is used internally by LLVM and cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:40:18
   |
LL |         asm!("", in("x19") foo);
   |                  ^^^^^^^^^^^^^

error: register class `preg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:43:18
   |
LL |         asm!("", in("p0") foo);
   |                  ^^^^^^^^^^^^

error: register class `preg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:47:20
   |
LL |         asm!("{}", in(preg) foo);
   |                    ^^^^^^^^^^^^

error: register class `preg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:50:20
   |
LL |         asm!("{}", out(preg) _);
   |                    ^^^^^^^^^^^

error: register `w0` conflicts with register `x0`
  --> $DIR/bad-reg.rs:56:32
   |
LL |         asm!("", in("x0") foo, in("w0") bar);
   |                  ------------  ^^^^^^^^^^^^ register `w0`
   |                  |
   |                  register `x0`

error: register `x0` conflicts with register `x0`
  --> $DIR/bad-reg.rs:58:32
   |
LL |         asm!("", in("x0") foo, out("x0") bar);
   |                  ------------  ^^^^^^^^^^^^^ register `x0`
   |                  |
   |                  register `x0`
   |
help: use `lateout` instead of `out` to avoid conflict
  --> $DIR/bad-reg.rs:58:18
   |
LL |         asm!("", in("x0") foo, out("x0") bar);
   |                  ^^^^^^^^^^^^

error: register `q0` conflicts with register `v0`
  --> $DIR/bad-reg.rs:61:32
   |
LL |         asm!("", in("v0") foo, in("q0") bar);
   |                  ------------  ^^^^^^^^^^^^ register `q0`
   |                  |
   |                  register `v0`

error: register `q0` conflicts with register `v0`
  --> $DIR/bad-reg.rs:63:32
   |
LL |         asm!("", in("v0") foo, out("q0") bar);
   |                  ------------  ^^^^^^^^^^^^^ register `q0`
   |                  |
   |                  register `v0`
   |
help: use `lateout` instead of `out` to avoid conflict
  --> $DIR/bad-reg.rs:63:18
   |
LL |         asm!("", in("v0") foo, out("q0") bar);
   |                  ^^^^^^^^^^^^

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:43:27
   |
LL |         asm!("", in("p0") foo);
   |                           ^^^
   |
   = note: register class `preg` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:47:29
   |
LL |         asm!("{}", in(preg) foo);
   |                             ^^^
   |
   = note: register class `preg` supports these types: 

error[E0658]: type `u128` cannot be used with this register class in stable
  --> $DIR/bad-reg.rs:69:37
   |
LL |         asm!("/* {:v} */", in(vreg) v); // requires asm_experimental_reg
   |                                     ^
   |
   = note: see issue #133416 <https://github.com/rust-lang/rust/issues/133416> for more information
   = help: add `#![feature(asm_experimental_reg)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: type `u128` cannot be used with this register class in stable
  --> $DIR/bad-reg.rs:71:38
   |
LL |         asm!("/* {:v} */", out(vreg) v); // requires asm_experimental_reg
   |                                      ^
   |
   = note: see issue #133416 <https://github.com/rust-lang/rust/issues/133416> for more information
   = help: add `#![feature(asm_experimental_reg)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 22 previous errors

For more information about this error, try `rustc --explain E0658`.
